fix button text so it wraps correctly (move code from _buttons.scss to _button-styles.scss)

--- a/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_button-styles.scss
@@ -4,6 +4,8 @@
     // font-weight: 100!important;
     transition: opacity 250ms ease-in-out;
     // box-shadow: 1px 5px 5px rgba(0,0,0,0.175);
+    text-align: left;
+    white-space: normal;
 }
 
 .btn:hover {
